k8s/testlab/ejabberd/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ejabberd
  namespace: ejabberd
spec:
  minReadySeconds: 0
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: ejabberd
      app.kubernetes.io/name: ejabberd
  serviceName: ejabberd-headless
  template:
    spec:
      containers:
        - args: null
          command:
            - /sbin/tini
            - '--'
            - /bin/sh
            - '-c'
            - run.sh
          # command: [ "/bin/sh", "-c", "--" ]
          # args: [ "while true; do sleep 300; done;" ]
          image: ghcr.io/sando38/ejabberd:24.06-k8s1
          imagePullPolicy: IfNotPresent
          lifecycle: null
          livenessProbe:
            exec:
              command:
                - cat
                - /opt/ejabberd/.ejabberd_ready
            failureThreshold: 30
            periodSeconds: 3
            terminationGracePeriodSeconds: 5
          name: ejabberd
          ports:
            - containerPort: 5222
              name: c2s
              protocol: TCP
            - containerPort: 5280
              name: http
              protocol: TCP
            - containerPort: 5443
              name: https
              protocol: TCP
            - containerPort: 5269
              name: s2s
              protocol: TCP
            - containerPort: 3478
              name: stun
              protocol: UDP
            - containerPort: 5210
              name: tcp-erl-dist
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - cat
                - /opt/ejabberd/.ejabberd_ready
            periodSeconds: 3
          resources: null
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 9000
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            exec:
              command:
                - cat
                - /opt/ejabberd/.ejabberd_ready
            failureThreshold: 10
            periodSeconds: 3
          volumeMounts:
            - mountPath: /opt/ejabberd/cacert/ca.crt
              name: ejabberd-cacert
              readOnly: true
              subPath: ca.crt
            - mountPath: /opt/ejabberd/certs/ejabberd-server-certificate/tls-combined.pem
              name: ejabberd-certs-ejabberd-server-certificate
              readOnly: true
              subPath: tls-combined.pem
            - mountPath: /opt/ejabberd/database
              name: mnesia
            - mountPath: /opt/ejabberd/conf
              name: ejabberd-config
            - mountPath: /usr/local/bin/ejabberdctl
              name: ejabberd-startup-scripts
              readOnly: true
              subPath: ejabberdctl
            - mountPath: /usr/local/bin/run.sh
              name: ejabberd-startup-scripts
              readOnly: true
              subPath: run.sh
      hostNetwork: false
      securityContext:
        fsGroup: 9000
      serviceAccountName: ejabberd
      terminationGracePeriodSeconds: 60
      volumes:
        - name: ejabberd-cacert
          secret:
            secretName: ejabberd-ca-certificate
        - name: ejabberd-certs-ejabberd-server-certificate
          secret:
            secretName: ejabberd-server-certificate
        - configMap:
            name: ejabberd-config
          name: ejabberd-config
        - configMap:
            defaultMode: 493
            items:
              - key: run.sh
                path: run.sh
              - key: ejabberdctl
                path: ejabberdctl
            name: ejabberd-startup-scripts
          name: ejabberd-startup-scripts
        - emptyDir: {}
          name: mnesia
  updateStrategy:
    type: RollingUpdate
