k8s/testlab/ejabberd/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ejabberd
  namespace: ejabberd
spec:
  type: ClusterIP
  selector:
    app: ejabberd
  ports:
    - name: web
      port: 80
      targetPort: 5280
